--- a/allifmaalcommonapp/templates/allifmaalcommonapp/assets/add-asset.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/assets/add-asset.html
@@ -1,372 +1,169 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  <a href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a>
- 
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-  <div class="allifmaincontainer">
-{% if allifquery_update %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit Asset</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-       
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-        
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-
-            <tr>
-              <td class="allif-fix-table-col">Category</td>
-              <td>{{form.category}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Staff Responsible</td>
-                <td>{{form.employee}}</td>
-            
-                </tr>
-                <tr>
-                  <td class="allif-fix-table-col">Asset A/C</td>
-                  <td>{{form.asset_account}}</td>
-              
-                  </tr>
-                  <tr>
-                    <td class="allif-fix-table-col">Payment A/C</td>
-                    <td>{{form.cost_account}}</td>
-                
-                    </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Supplier</td>
-                      <td>{{form.supplier}}</td>
-                  
-                      </tr>
-                      <tr>
-                        <td class="allif-fix-table-col">Status</td>
-                        <td>{{form.asset_status}}</td>
-                    
-                        </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Quantity</td>
-              <td>{{form.quantity}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Value</td>
-                <td>{{form.value}}</td>
-            
-                </tr>
-               
-                  <tr>
-                    <td class="allif-fix-table-col">Deposit</td>
-                    <td>{{form.deposit}}</td>
-                
-                    </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Salvage Value</td>
-                      <td>{{form.salvage_value}}</td>
-                  
-                      </tr>
-                      <tr>
-                        <td class="allif-fix-table-col">Lifespan</td>
-                        <td>{{form.lifespan}}</td>
-                    
-                        </tr>
-         
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-              <tr>
-                <td class="allif-fix-table-col">Comments</td>
-                <td>{{form.comments}}</td>
-            
-                </tr>
-                <tr>
-                  <td class="allif-fix-table-col">Terms</td>
-                  <td>{{form.terms}}</td>
-              
-                  </tr>
-                  <tr>
-                    <td class="allif-fix-table-col">Acquired On</td>
-                    <td>{{form.acquired}}</td>
-                
-                    </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Expires</td>
-                      <td>{{form.expires}}</td>
-                  
-                      </tr>
-                      <tr>
-                        <td class="allif-fix-table-col">Posting Status</td>
-                        <td>{{form.status}}</td>
-                    
-                        </tr>
-                        <tr>
-                          <td class="allif-fix-table-col">Depreciation Method</td>
-                          <td>{{form.depreciation}}</td>
-                      
-                          </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-{% else %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Asset</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-       
-    
-      <tr>
-        <td class="allif-fix-table-col">Category</td>
-        <td>{{form.category}}</td>
-    
-        </tr>
-       
-          <tr>
-            <td class="allif-fix-table-col">Asset A/C</td>
-            <td>{{form.asset_account}}</td>
-        
-            </tr>
-        <tr>
-          <td class="allif-fix-table-col">Payment A/C</td>
-          <td>{{form.cost_account}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Supplier</td>
-            <td>{{form.supplier}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Status</td>
-              <td>{{form.asset_status}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Depreciation Method</td>
-                <td>{{form.depreciation}}</td>
-            
-                </tr>
-                 <tr>
-            <td class="allif-fix-table-col">Staff in Charge</td>
-            <td>{{form.employee_in_charge}}</td>
-        
-            </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        
-          <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Quantity</td>
-              <td>{{form.quantity}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Value</td>
-                <td>{{form.value}}</td>
-            
-                </tr>
-               
-                  <tr>
-                    <td class="allif-fix-table-col">Deposit</td>
-                    <td>{{form.deposit}}</td>
-                
-                    </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Salvage Value</td>
-                      <td>{{form.salvage_value}}</td>
-                  
-                      </tr>
-                      <tr>
-                        <td class="allif-fix-table-col">Lifespan</td>
-                        <td>{{form.lifespan}}</td>
-                    
-                        </tr>
-         
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-         
-              <tr>
-                <td class="allif-fix-table-col">Comments</td>
-                <td>{{form.comments}}</td>
-            
-                </tr>
-                <tr>
-                  <td class="allif-fix-table-col">Terms</td>
-                  <td>{{form.terms}}</td>
-              
-                  </tr>
-                  <tr>
-                    <td class="allif-fix-table-col">Acquired On</td>
-                    <td>{{form.acquired}}</td>
-                
-                    </tr>
-                    <tr>
-                      <td class="allif-fix-table-col">Expires</td>
-                      <td>{{form.expires}}</td>
-                  
-                      </tr>
-                      <tr>
-                        <td class="allif-fix-table-col">Posting Status</td>
-                        <td>{{form.status}}</td>
-                    
-                        </tr>
-                       
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-{% endif %}
-
-
-
-
-</div>
-
-</div>
-  {% block scripts %}
-
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+  <a href="{% allif_get_single_nav_link_url 'Assets' user_var glblslug %}">Assets</a>
+  <a href="{% allif_get_single_nav_link_url 'AddAsset' user_var glblslug %}">Add Asset</a>
   {% endblock %}
-   {% endblock %}
+   {% block core-tab-col-one %}
+   
+    <tr>
+      <td class="allif-fix-table-col-forms">Category</td>
+      <td>{{form.category}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Staff in charge</td>
+      <td>{{form.employee_in_charge}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Asset A/C</td>
+      <td>{{form.asset_account}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Payment A/C</td>
+      <td>{{form.cost_account}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Supplier</td>
+      <td>{{form.supplier}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Asset Status</td>
+      <td>{{form.asset_status}}</td>
+    </tr>
+    {%endblock%}
+
+    {% block core-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+     <tr>
+        <td class="allif-fix-table-col-forms">Description</td>
+        <td>{{form.description}}</td>
+      </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Quantity</td>
+      <td>{{form.quantity}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Value</td>
+      <td>{{form.value}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Deposit</td>
+      <td>{{form.deposit}}</td>
+    </tr>
+    
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+      <tr>
+      <td class="allif-fix-table-col-forms">Salvage Value</td>
+      <td>{{form.salvage_value}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Life Span</td>
+      <td>{{form.lifespan}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Terms</td>
+      <td>{{form.terms}}</td>
+    </tr>
+   
+      <tr>
+      <td class="allif-fix-table-col-forms">Acquired On</td>
+      <td>{{form.acquired}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Depreciation</td>
+      <td>{{form.depreciation}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Expires</td>
+      <td>{{form.expires}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Maker Name</td>
+      <td>{{form.maker_name}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Asset Model</td>
+      <td>{{form.equipment_model}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Manufactured Year</td>
+      <td>{{form.manufactured_year}}</td>
+    </tr>
+    
+    
+    {%endblock%}
+       
+   {% block standard-tab-col-two %}
   
+    <tr>
+      <td class="allif-fix-table-col-forms">Starting Odometer</td>
+      <td>{{form.starting_odometer}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Primary Meter</td>
+      <td>{{form.primary_meter}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Oil Type</td>
+      <td>{{form.oil_type}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Oil Capacity</td>
+      <td>{{form.oil_capacity}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Balance</td>
+      <td>{{form.balance}}</td>
+    </tr>
+    
+  
+     <tr>
+      <td class="allif-fix-table-col-forms">Energy Usage</td>
+      <td>{{form.energy_usage}}</td>
+    </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Plate Number</td>
+      <td>{{form.plate_number}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Weight KGs</td>
+      <td>{{form.capacity_kg}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Service Date</td>
+      <td>{{form.last_service_date}}</td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col-forms">Next Service On</td>
+      <td>{{form.next_service_due}}</td>
+    </tr>
+    
+   
+    {%endblock%}
+
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Assets' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteAssetConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
+
