--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/cust-delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/cust-delete-confirm.html
@@ -1,183 +1,13 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
+{% extends 'allifmaalcommonapp/ui/general/delete-confirm.html'%}
+{% load allif_navigation_tags %}
+  
+{% block delete-action-decline %}
+<a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Clients' user_var glblslug %}">No, Dont Delete {{allifquery}}</a>
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
 
-<div class="row mt-12" ><!--start....header row-->
+{% block delete-action-confirm %}
+<a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteCustomer' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a>
+{% endblock %}
 
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a>
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="delete-confirmation-header">Do you want to delete {{allifquery}}?</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      <tr>
-        <td class="allif-fix-table-col">Supplier Name</td>
-        <td>{{allifquery.name}}</td>
-    
-        </tr>
-       
-        
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Balance</td>
-            <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
-        
-            </tr>
-          
-        
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Date</td>
-            <td>{{allifquery.date}}</td>
-        
-            </tr>
-          
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-<div class="row mt-12"> <!--start....table row-->
-  
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-    <tr>
-        <td>
-        <div class="delete-options-container">
-          <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Back</a>
-        </div>
-        </td>
-      </tr>
-       
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td>
-            <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">No</a>
-            </div>
-            </td>
-          </tr>
-           
-         
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td>
-            <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonDeleteCustomer' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
-            </div>
-            </td>
-          </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-</div>
-</div>
-  {% block scripts %}
-
-  {% endblock %}
-   {% endblock %}
-  
+<a href="{% allif_get_single_nav_link_url 'Clients' user_var glblslug %}">Clients</a>
+  <a href="{% allif_get_single_nav_link_url 'AddClient' user_var glblslug %}">Add New Customer</a>
