--- a/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/add-expense.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/expenses/add-expense.html
@@ -1,281 +1,62 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  <a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
- 
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-  <div class="allifmaincontainer">
-{% if allifquery %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Edit {{allifquery}} Expense</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      
-      <tr>
-        <td class="allif-fix-table-col">Division</td>
-        <td>{{form.division}}</td>
-    
-        </tr>
-        
-        <tr>
-          <td class="allif-fix-table-col">Branch</td>
-          <td>{{form.branch}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Department</td>
-            <td>{{form.department}}</td>
-        
-            </tr>
-         
-            <tr>
-              <td class="allif-fix-table-col">Expense A/C</td>
-              <td>{{form.expense_account}}</td>
-          
-              </tr>
-             
-          <tr>
-              <td class="allif-fix-table-col">Expense Name</td>
-              <td>{{form.name}}</td>
-          
-              </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         
-            <tr>
-              <td class="allif-fix-table-col">Supplier</td>
-              <td>{{form.supplier}}</td>
-          
-              </tr>
-         
-                  <tr>
-                    <td class="allif-fix-table-col">Description</td>
-                    <td>{{form.description}}</td>
-                
-                    </tr>
-                   <tr>
-                        <td class="allif-fix-table-col">Quantity</td>
-                        <td>{{form.quantity}}</td>
-                    
-                        </tr>   
-                     
-                      <tr>
-                        <td class="allif-fix-table-col">Amount</td>
-                        <td>{{form.amount}}</td>
-                    
-                        </tr>   
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-            <tr>
-              <td class="allif-fix-table-col">Terms</td>
-              <td>{{form.mode}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Status</td>
-                <td>{{form.status}}</td>
-            
-                </tr>
-          
-              <tr>
-                <td class="allif-fix-table-col">Comments</td>
-                <td>{{form.comments}}</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-{% else %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New Expense</div>
-  <form method='POST' action=''>{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-   
-        
-            <tr>
-              <td class="allif-fix-table-col">Expense A/C</td>
-              <td>{{form.expense_account}}</td>
-          
-              </tr>
-             
-                <tr>
-                  <td class="allif-fix-table-col">Supplier</td>
-                  <td>{{form.supplier}}</td>
-              
-                  </tr>
-                    <tr>
-              <td class="allif-fix-table-col">Terms</td>
-              <td>{{form.mode}}</td>
-          
-              </tr>
-              
-            
-          
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-           <tr>
-            <td class="allif-fix-table-col">Description</td>
-            <td>{{form.description}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Amount</td>
-            <td>{{form.amount}}</td>
-        
-            </tr>   
-            <tr>
-              <td class="allif-fix-table-col">Comments</td>
-              <td>{{form.comments}}</td>
-          
-              </tr>
-              <tr>
-              <td class="allif-fix-table-col">Expense Name</td>
-              <td>{{form.name}}</td>
-          
-              </tr>
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-          
-              <tr>
-                <td class="allif-fix-table-col">Status</td>
-                <td>{{form.status}}</td>
-            
-                </tr>
-          
-            
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-{% endif %}
-
-
-
-
-</div>
-
-</div>
-  {% block scripts %}
-
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+  <a href="{% allif_get_single_nav_link_url 'Expenses' user_var glblslug %}">Expenses</a>
+  <a href="{% allif_get_single_nav_link_url 'AddExpense' user_var glblslug %}">Add New Expense</a>
   {% endblock %}
-   {% endblock %}
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Supplier Name</td>
+      <td>{{form.name}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Description</td>
+      <td>{{form.description}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Supplier</td>
+      <td>{{form.supplier}}</td>
+    </tr>
+    
+    
+        
+    {%endblock%}
+
+    {% block core-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Amount</td>
+      <td>{{form.amount}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">Expense A/C</td>
+      <td>{{form.expense_account}}</td>
+    </tr>
    
+   
+    {%endblock%}
+
+     {% block standard-tab-col-one %}
+    
+  
+    {%endblock%}
+       
+   {% block standard-tab-col-two %}
+ 
+    {%endblock%}
+
+
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Expenses' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteExpenseConfirm.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
+
+
+
